bundled stripped/improved wiringPi version

--- a/raspi/Makefile
+++ b/raspi/Makefile
@@ -4,19 +4,22 @@
 CC = gcc -fnon-call-exceptions
 CXX = g++ -fnon-call-exceptions -std=c++11
 
-CFLAGS =  -DRPI4 -Wno-pointer-sign -Wall -c 
+#see https://gcc.gnu.org/onlinedocs/gcc/Option-Summary.html
+#  -Wformat=2 -Wextra -Winline -pipe -fPIC
+CFLAGS =  -DRPI4 -Wno-pointer-sign -Wall -c  
 CXXFLAGS = -DRPI4 -fno-rtti -Wall -D__STDC_LIMIT_MACROS
 
-LDFLAGS = -funroll-loops -Ofast
+LDFLAGS = -funroll-loops -OFast
 
 SRCDIR=../src
 RSRCDIR=./src
+WSRCDIR=./wiringPi
 
 OBJDIR = ./obj
-
-CCOBJS = $(OBJDIR)/cia.o $(OBJDIR)/cpu.o $(OBJDIR)/hacks.o $(OBJDIR)/memory.o $(OBJDIR)/vic.o
+CCOBJS = $(OBJDIR)/cia.o $(OBJDIR)/cpu.o $(OBJDIR)/hacks.o $(OBJDIR)/memory.o $(OBJDIR)/vic.o  $(OBJDIR)/wiringPi.o 
 CXXOBJS = $(OBJDIR)/core.o $(OBJDIR)/digi.o $(OBJDIR)/envelope.o $(OBJDIR)/filter.o $(OBJDIR)/loaders.o $(OBJDIR)/sid.o $(OBJDIR)/system.o $(OBJDIR)/wavegenerator.o $(OBJDIR)/sidplayer.o 
 CXXROBJS = $(OBJDIR)/main.o $(OBJDIR)/rpi4_utils.o $(OBJDIR)/gpio.o $(OBJDIR)/cp1252.o
+	
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
 	$(CC) -c -o $@ $< $(CFLAGS)
@@ -27,12 +30,16 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.cpp
 $(OBJDIR)/%.o: $(RSRCDIR)/%.cpp
 	$(CXX) -c -o $@ $< $(CXXFLAGS)
 
+$(OBJDIR)/%.o: $(WSRCDIR)/%.c
+	$(CC) -c -o $@ $< $(CFLAGS)
+
 all: websid
 
 websid: $(CCOBJS) $(CXXOBJS) $(CXXROBJS)
-		 g++ $(LDFLAGS)  $(CCOBJS) $(CXXOBJS) $(CXXROBJS) -lm -lpthread -lwiringPi -o websid
+		 g++ $(LDFLAGS)  $(CCOBJS) $(CXXOBJS) $(CXXROBJS)                     -lm -lpthread -o websid
+# in order to use the original wiringPi lib you need to add    -lwiringPi     in the gap in line above, 
+# and you have to add -DUSE_ORIG_WIRINGPI to the CFLAGS and remove $(OBJDIR)//wiringPi.o from CCOBJS
 
-		 
 clean:
 	rm -f $(OBJDIR)/*.o
 	rm -f websid
